Projet GL/Projet_GL/src/test/deca/syntax/invalid/bad_operation_sum.res
src/test/deca/syntax/invalid/bad_operation_sum.deca:12:6: mismatched input '+' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', '(', '!', '-', STRING, IDENT, INT, FLOAT}
